# MD_Agent_Test1

./: README.md  pyproject.toml
.github/agents/: MD_Test.agent.md
md_test_agent_plugin/: __init__.py
md_test_agent_plugin.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
tests/: test_installer.py
